Fix compile-time issue